<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginreturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="right"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgSplash"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/group_3" />

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#5D8BF4"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/mailET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#5D8BF4"
            android:hint="@string/mail"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />


        <EditText
            android:id="@+id/passwordET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#5D8BF4"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#5D8BF4"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner_background" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleY="1.2"
                android:scaleX="1.2"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#EFFFFD"
            android:text="@string/confirm"
            android:textColor="@color/black" />

    </LinearLayout>
</LinearLayout>
