<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/imgPickImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="170dp"
            android:layout_marginRight="90dp"
            android:src="@drawable/ic_camera"
            app:layout_anchor="@id/imgUser"
            app:layout_anchorGravity="end|center"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/buttonlogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:scaleY="2"
            android:scaleX="2"
            android:src="@drawable/ic_logout" />

        <ImageView
            android:id="@+id/Back"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="#5D8BF4"
            android:hint="@string/username"
            android:inputType="text|textCapSentences"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userStatusET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="#5D8BF4"
            android:hint="@string/basic_status"
            android:inputType="text|textCapSentences"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnDataDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />
    
</LinearLayout>